python/test-data/testMissingReturn.err
Traceback (most recent call last):
  File "test-data/testMissingReturn.py", line 6, in <module>
    print(billigStrom(500))
WyppTypeError: got value of wrong type
Did you miss an return statement?

given:    None
expected: value of type float

context: billigStrom(kwh: float) -> float
                                    ^^^^^
declared at: test-data/testMissingReturn.py:3
caused by: test-data/testMissingReturn.py:4
  |     pass
